Fixed issues with navigation menu on small screens

--- a/public/style/screen.css
+++ b/public/style/screen.css
@@ -144,7 +144,6 @@ a {
 }
 
 header,
-nav,
 section,
 footer {
 	padding-left: 10vw;
@@ -157,39 +156,40 @@ header h1 {
 
 nav {
 	background-color: var(--primary-background-bright);
+	border-bottom-color: var(--primary-transparent);
 	border-bottom-style: solid;
 	border-bottom-width: 0.2em;
-	border-bottom-color: var(--primary-transparent);
 }
 
 nav ul {
-	list-style-type: none;
-	padding: 0;
+	align-items: stretch;
 	display: flex;
 	flex-direction: column;
-	align-items: stretch;
+	list-style-type: none;
 	margin: 0;
+	padding: 0;
+	width: 100%;
 }
 
 nav a {
+	border-color: var(--primary-transparent);
+	border-width: 1px;
 	color: var(--primary);
-	padding: 1em 2em;
+	display: block;
+	font-weight: 700;
+	padding: 1em 10vw;
 	text-decoration-color: var(--primary-saturated);
 	text-decoration-thickness: 1px;
 	text-transform: uppercase;
-	font-weight: 700;
-	display: block;
-	border-left-style: solid;
-	border-width: 1px;
-	border-color: var(--primary-transparent);
 }
-	nav li:last-child a {
-		border-right-style: solid;
-	}
 
 	nav a:hover,
 	nav a:focus {
 		background-color: white;
+	}
+
+	nav li + li a {
+		border-top-style: solid;
 	}
 
 section {
@@ -209,7 +209,6 @@ header {
 
 footer {
 	background-color: var(--primary-background-dim);
-	/* color: var(--foreground-contrast); */
 }
 
 p {
@@ -250,7 +249,7 @@ textarea {
 	opacity: 0.5;
 }
 
-button {
+/* button {
 	background-color: var(--highlight);
 	border-radius: 0.5em;
 	border-style: none;
@@ -267,7 +266,7 @@ button {
 	button:hover,
 	button:focus {
 		background-color: var(--highlight-focus);
-	}
+	} */
 
 
 
@@ -302,35 +301,35 @@ button {
 
 .cta {
 	background-color: var(--primary);
+	border-radius: 0.25em;
+	border-right-color: white;
+	border-right-style: solid;
+	border-right-width: 2em;
 	color: var(--foreground-contrast);
 	display: inline-block;
-	width: 100%;
+	font-weight: 700;
+	line-height: 1;
+	margin: 1em 0;
 	max-width: 15em;
 	padding: 0.5em 1em;
-	border-right-style: solid;
-	border-right-color: white;
-	border-right-width: 2em;
 	position: relative;
-	border-radius: 0.25em;
-	line-height: 1;
-	font-weight: 700;
-	text-transform: uppercase;
 	text-align: right;
 	text-decoration: none;
-	margin: 1em 0;
+	text-transform: uppercase;
+	width: 100%;
 }
 	.cta:after {
+		background-color: var(--primary-transparent);
+		bottom: 0;
+		color: var(--primary);
 		content: "\0279C";
+		display: block;
+		line-height: 2em;
 		position: absolute;
 		right: -2em;
-		line-height: 2em;
-		width: 2em;
 		text-align: center;
 		top: 0;
-		bottom: 0;
-		background-color: var(--primary-transparent);
-		display: block;
-		color: var(--primary);
+		width: 2em;
 	}
 
 	.cta:hover,
@@ -339,9 +338,9 @@ button {
 	}
 
 	.transition svg {
-		width: 100%;
-		height: auto;
 		display: block;
+		height: auto;
+		width: 100%;
 	}
 
 
@@ -355,12 +354,12 @@ button {
 }
 	.hero h2 {
 		font-size: 10vw;
-		line-height: 0.8;
-		font-weight: 900;
-		text-transform: uppercase;
-		letter-spacing: -0.03em;
-		font-variation-settings: "opsz" 48;
 		font-stretch: 66%;
+		font-variation-settings: "opsz" 48;
+		font-weight: 900;
+		letter-spacing: -0.03em;
+		line-height: 0.8;
+		text-transform: uppercase;
 	}
 
 	.hero + .transition {
@@ -404,7 +403,25 @@ button {
 
 /* 40 * 16px = 640px (or greater) */
 @media (min-width: 40em) {
+
+	nav {
+		padding-left: 10vw;
+		padding-right: 10vw;
+	}
 	nav ul {
 		flex-direction: row;
+	}
+
+	nav a {
+		border-left-style: solid;
+		padding-left: 2em;
+		padding-right: 2em;
+	}
+		nav li:last-child a {
+			border-right-style: solid;
+		}
+		
+	nav li + li a {
+		border-top-style: none;
 	}
 }
